# gcovr-learn

./: CMakeLists.txt  README.md  manualbuild.sh  setup-commands.txt
include/: simple.hpp
src/: CMakeLists.txt  simple.cpp
tst/: CMakeLists.txt  simpletests.cpp  test.cpp
